# LinkedIn_Scraping

./: .env  README.md  pyproject.toml
src/: M0100_Search.py  M0200_Profile_Scraping.py  M0300_Generate_Insights.py  M0400_File_Generation.py
src/Functions/: Generate_Insights.py  Get_Profile.py  Utilities.py
